feat: add change info slider

--- a/src/js/PatientsTable/PatientsTable.scss
+++ b/src/js/PatientsTable/PatientsTable.scss
@@ -1,4 +1,8 @@
 .table-container {
     height: 500px !important;
-    width: 500px !important;
+    width: 100% !important;
+}
+
+.main-wrapper {
+    width: 40% !important;
 }
