--- a/src/js/PatientsTable/PatientsTable.scss
+++ b/src/js/PatientsTable/PatientsTable.scss
@@ -1,8 +1,12 @@
 .table-container {
-    height: 500px !important;
-    width: 100% !important;
+  height: 500px !important;
+  width: 100% !important;
 }
 
 .main-wrapper {
-    width: 40% !important;
+  width: 40% !important;
+}
+
+.MuiTableRow-root.Mui-selected {
+  background-color: #57b2e64b !important;
 }
